--- a/previs/package.json
+++ b/previs/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native": "^0.67.2",
+    "react-native-web": "^0.17.5",
     "react-scripts": "5.0.0",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.4.1",
