--- a/previs/package.json
+++ b/previs/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "5.0.0",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.4.1",
+    "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
