--- a/previs/package.json
+++ b/previs/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "remixicon": "^2.5.0",
     "simple-peer": "^9.11.0",
     "socket.io-client": "^4.4.1",
     "use-local-storage": "^2.3.6",
