--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {},
   "scripts": {
