--- a/previs/package.json
+++ b/previs/package.json
@@ -10,6 +10,7 @@
     "react-div-100vh": "^0.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "remixicon": "^2.5.0",
     "simple-peer": "^9.11.0",
