--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "http": "^0.0.1-security",
