--- a/package.json
+++ b/package.json
@@ -4,13 +4,11 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "animate.css": "^4.1.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "http": "^0.0.1-security",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1",
-    "use-local-storage": "^2.3.6"
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {},
   "scripts": {
