--- a/previs/package.json
+++ b/previs/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "react": "^17.0.2",
@@ -13,11 +13,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "remixicon": "^2.5.0",
-    "simple-peer": "^9.11.0",
-    "socket.io-client": "^4.4.1",
-    "use-local-storage": "^2.3.6",
-    "web-vitals": "^2.1.4"
+    "socket.io-client": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
